T09 - Implementar areas e comodos
